Fixed layout issues with the domain block and then - Putting it all together.

--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,7 @@ margin-left: 10px;
     font-weight: 600;
     margin:1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -318,6 +318,7 @@ padding-right: 6rem;
     border: 0;
     padding: 1.5rem 2rem;
     flex-grow: 1;
+    width: 0;
 }
 
 .input-group .btn{
@@ -824,9 +825,10 @@ margin: 0 auto;
 }
 
 .block-domain__prices{
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(2,6rem);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
     justify-items: center;
